--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         <div id="lead-content">
             <h1>Harsh Jindal</h1>
             <h2>Project Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+		<a href="resources/resume.pdf" class="btn-rounded-white">Download Resume</a>
+		
+		
         </div>
         <!-- End #lead-content -->
 
