--- a/index.html
+++ b/index.html
@@ -12,17 +12,6 @@
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-	
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138375399-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-138375399-1');
-</script>
-
 </head>
 
 <body>
@@ -61,9 +50,7 @@
         <div id="lead-content">
             <h1>Harsh Jindal</h1>
             <h2>Project Engineer</h2>
-		<a href="resources/resume.pdf" class="btn-rounded-white">Download Resume</a>
-		
-		
+            <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -298,9 +285,8 @@
         </div>
     </footer>
     <!-- End footer -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="js/scripts.min.js"></script>
-   
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+   <script src="js/scripts.min.js"></script>
 </body>
 
 </html>
