--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Aim to bring effectiveness and creativity in day to day activities through continuous learning. An articulate young person who has a natural flare for being able to communicate and build relationships with potential clients. I am creative, innovative and willing to contribute ideas and professional opinion to any project. /n 3.6 years of Experience in Software Application Development, testing and implementation on Web and server-based Applications. Involved in all phases of the SDLC (Software Development Life Cycle) from analysis, design, development, testing, implementation and maintenance with timely delivery against aggressive deadlines.
+                        Aim to bring effectiveness and creativity in day to day activities through continuous learning. An articulate young person who has a natural flare for being able to communicate and build relationships with potential clients. I am creative, innovative and willing to contribute ideas and professional opinion to any project. \n 3.6 years of Experience in Software Application Development, testing and implementation on Web and server-based Applications. Involved in all phases of the SDLC (Software Development Life Cycle) from analysis, design, development, testing, implementation and maintenance with timely delivery against aggressive deadlines.
                     </p>
                 </div>
             </div>
