--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Harsh Jindal</h1>
-            <h2>Studing Master of Information Systems at Deakin University</h2>
+            <h2>Studying Master of Information Systems at Deakin University</h2>
             <a href="https://github.com/harsh8894/harsh8894.github.io/raw/master/resources/Harsh_Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
