Update Resume Link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div id="lead-content">
             <h1>Harsh Jindal</h1>
             <h2>Studying Master of Information Systems at Deakin University</h2>
-            <a href="https://github.com/harsh8894/harsh8894.github.io/raw/master/resources/Resume_HarshJindal.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="https://raw.githubusercontent.com/harsh8894/harsh8894.github.io/master/resources/Resume_HarshJindal.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
